# uni_assignments

./: CMakeLists.txt  README.md
1st term/: 0. agile triangles and number of divisors.cpp  1. even numbers, prime numbers, differenct symbols etc.cpp  1. substring.cpp  3. fractions.cpp  3. rpn + valid check.cpp  4. circles2.cpp  4. convex hull.cpp  5. geometry.cpp  5. matrices.cpp  6. rpn.cpp
1st term/2. long arithmetic/: 2. l2.cpp  README.txt
1st term/7. files/: countriesWeather.cpp  countriesWeather.txt  files.cpp
1st term/8. calendar/: Calendar.cpp  Calendar.h  Commands.cpp  Commands.h  calendar.sln  main.cpp  meetings.txt  myUtils.cpp  myUtils.h  todo.txt
1st term/9. bonus tasts/: permutations.cpp  sorting.cpp
1st term/bonus tasts/: drabynka.cpp  monetky.cpp  templates.cpp
1st term/module2/: module2 all.docx
2nd term/BudgetTracker/: build.gradle
2nd term/ExpencesTracker/: settings.gradle
2nd term/Lab1/: CMakeLists.txt  Database.cpp  Database.h  Item.cpp  Item.h  README.txt  benchmark_results.txt  main.cpp
2nd term/Lab2/: TASK.txt  benchmark_results.txt  main.cpp
2nd term/Lab2_b/: CMakeLists.txt  PriorityQueue.cpp  PriorityQueue.h  SimpleSkipList.h  SkipList.h  TASK.txt  main.cpp
2nd term/Lab3_A/: CMakeLists.txt  main.cpp
2nd term/Lab3_a/: BenchmarkMode.cpp  BenchmarkMode.h  CMakeLists.txt  DemoMode.cpp  DemoMode.h  README.txt  TASK.txt  benchmark_results.txt  (+1 more)
2nd term/Lab3_b/: CMakeLists.txt  CountingSort.cpp  CountingSort.h  Item.cpp  Item.h  QuickSort.cpp  QuickSort.h  README.txt  RadixSort.cpp  RadixSort.h  benchmark_result  main.cpp
(+286 files in other folders)
